fix: dark mode

--- a/docs/.vitepress/theme/style/antdTheme/dark.less
+++ b/docs/.vitepress/theme/style/antdTheme/dark.less
@@ -1,7 +1,7 @@
 // 此文件 client 和 webview 共用
 
-@import 'ant-design-vue/dist/antd.dark.less';
-@import './common.less';
+@import "ant-design-vue/dist/antd.dark.less";
+@import "./common.less";
 
 @primary-color: #7676c2; // 全局主色
 @heading-color: rgba(255, 255, 255, 0.9); // 标题色
@@ -10,3 +10,7 @@
 @disabled-color: rgba(255, 255, 255, 0.5); // 失效色
 @error-color: @red-8;
 @popover-background: #2d2d2d;
+
+body {
+  background-color: #1e1e20;
+}
