--- a/docs/.vitepress/theme/style/global.less
+++ b/docs/.vitepress/theme/style/global.less
@@ -1,34 +1,11 @@
 @import './var.less';
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 // 涉及到代码均用 monaco 字体
 @font-face {
   font-family: 'monaco';
   src: url('/font/Monaco.ttf');
   font-style: normal;
   font-weight: 400;
-}
-
-body {
-  background-color: transparent !important;
-}
-
-.mac {
-  background-color: var(--body-bg-trans-color);
-}
-
-.win,
-.linux {
-  background-color: var(--body-bg-color);
-}
-
-.win {
-  overflow: hidden;
 }
 
 // Light theme
